Fix overlapping styles

--- a/frontend/src/CharacterPage.css
+++ b/frontend/src/CharacterPage.css
@@ -1,4 +1,4 @@
-main {
+#char-main {
     display: flex;
     justify-content: space-between;
     padding: 55px 30px;
